# mytar

./: .gitignore  LICENSE  Makefile  PROMPT.md  README.md  pyproject.toml
src/mytar/: __init__.py  __main__.py  cli.py  tar_builder.py
tests/: test_tar_builder.py
