[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mytar"
version = "0.1.0"
description = "A CLI wrapper around GNU tar that excludes .notar-marked directories and respects .gitignore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mytar = "mytar.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
